# clean_flights

./: .gitignore  Dockerfile.dbmate  Dockerfile.postgres  Makefile  README.md  compose.yaml  compose.yml  pyproject.toml
.github/workflows/: run_tests.yaml
db/migrations/: 20260701095941_init.sql
docker/postgres/init/: 01-create-test-db.sql
src/flights/: bootstrap.py  config.py  logger.py
src/flights/api/: flask.py
src/flights/api/flask/: app.py  errors.py  routes.py  validation.py  wsgi.py
src/flights/domain/: errors.py  model.py
src/flights/infrastructure/repo/memory/: memory_repository.py
src/flights/infrastructure/repo/sqlite/: mapper.py  schema.py  sqlite_repository.py
src/flights/infrastructure/uow/memory/: memory_uow.py
src/flights/infrastructure/uow/sqlite/: sqlite_uow.py
src/flights/service_layer/: commands.py  repository.py  service.py
tests/: conftest.py
tests/e2e/: conftest.py  test_api.py
tests/integration/: conftest.py  test_postgres_uow.py  test_uow.py
tests/unit/: test_model.py  test_service.py
